--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ nav a:hover h4{
 
 #connect-wallet-button{
     background: none;
+    font-family:"Varela Round";
     padding: 10px 20px;
     font-size: 18px;
     font-weight: 500;
@@ -143,15 +144,31 @@ nav a:hover h4{
 #info-right{
     width: 40%;
     text-align:right;
-    justify-content: end;
+    justify-content: space-between;
 }
 
 #info-right-top {
     width: 100%;
-    display: flex;
     gap:2vw;
+    text-align: center;
+    vertical-align: top;
 }
 
-#info-right-top h2,#info-right-top h3{
-    text-align: right;
+#info-right-bottom{
+    position: relative;
+}
+
+#info-right-bottom img{
+    position: absolute;
+    top: 0;
+    left:30%;
+    height: 75px;
+    object-fit: contain;
+    aspect-ratio: 1/1;
+    background-clip: padding-box;
+    border-radius: 50%;
+}
+
+#img2{
+    left:35%;
 }
