--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ nav a:hover h4{
 
 }
 
+#page1-left{
+    font-family: "Varela Round";
+}
+
 #page1-bottom{
     height:20vw;
     /* background-color: blueviolet; */
