--- a/style.css
+++ b/style.css
@@ -125,25 +125,29 @@ nav a:hover h4{
 #more{
     display: flex;
     gap: 2vw;
-    align-items:center;
+    text-align: center;
 }
 
 #get-started-button{
     background-color: rgb(127, 200, 18);
-    font-family: "Varela Round";
     border-radius: 50px;
     color: black;
     border: none;
-    padding: 10px 10px;
+    padding: 10px 20px;
     font-size: 18px;
     font-weight: 500;
 
 }
 
+#learn-more{
+    text-align: center;
+    margin-bottom: 15px;
+}
+
 #learn-more h4 a{
     text-decoration: none;
     color: aliceblue;
-    font-size: 1vw;
+    font-size: 18px;
     transition: 0.3s;
 }
 
