--- a/style.css
+++ b/style.css
@@ -14,17 +14,28 @@ html,body{
 #main{
     position: relative;
     z-index: 10;
-    background-image: url(./bg.jpg) ;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    /* Lean */
+    /* background-image: url(https://images.pexels.com/photos/19613009/pexels-photo-19613009/free-photo-of-brunette-woman-in-black-puffer-jacket-leaning-on-metal-railing.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load); */
+    /* background-size: cover; */
+    /* background-position: center;
+    background-attachment: fixed; */
 }
+
+#video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Cover the entire viewport */
+    z-index: -1; /* Place the video behind other content */
+  }
 
 #page1{
     min-height: 100vh;
     width: 100%;
     color: whitesmoke;
-    backdrop-filter: blur(8px); 
+    /* backdrop-filter: blur(8px);  */
     padding: 0 2vw;
 }
 
@@ -160,11 +171,10 @@ nav a:hover h4{
 }
 
 #page1-bottom{
-    height:19vw;
-   background-color: blueviolet;
-   z-index: 100;
-    /* backdrop-filter: blur(8px); */
-    border-radius: 25px;
+    height:18vw;
+    z-index: 100;
+    backdrop-filter: blur(10px);
+    border-radius: 40px;
     padding: 3vw 0;
     width: 93%;
     font-family: "Raleway",sans-serif;
@@ -177,7 +187,6 @@ nav a:hover h4{
     display:flex;
     width: 60%;
     justify-content: space-between;
-    background-color: brown;
     align-items: center;
 }
 
@@ -199,7 +208,6 @@ nav a:hover h4{
     width: 40%;
     text-align:center;
     justify-content: space-between;
-    background-color: aqua;
 }
 
 #info-right-top {
@@ -209,7 +217,6 @@ nav a:hover h4{
     text-align: top;
     justify-content: center;
     vertical-align: top;
-    background-color: chartreuse;
     padding-top: 30px;
 }
 
@@ -246,6 +253,5 @@ nav a:hover h4{
     min-height: 100vh;
     width: 100%;
     color: whitesmoke;
-    backdrop-filter: blur(8px); 
     padding: 0 2vw;
 }
